# controls

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  flake.nix  package.xml
analysis/: Cargo.toml  README.md  trajectory_sim_visualize.py
analysis/scripts/: record_and_visualize.sh  rosbag2numpy.py  telem_bag2np.py  telem_visualize.py  trajectory_sim_visualize.py
analysis/src/: main.rs
ateam-controls-c/: Cargo.toml
ateam-controls-c/include/ateam_controls/: ateam_controls.h
ateam-controls-c/src/: lib.rs
ateam-controls/src/: algebra.rs  bangbang_trajectory.rs  ctypes.rs  geometry.rs  lib.rs  robot_model.rs  robot_physical_params.rs  state_estimation.rs  trajectory_params.rs
ateam_controls/: Cargo.toml
ateam_controls/src/: bang_bang_trajectory.rs  bangbang_trajectory.rs  geometry.rs  lib.rs  robot_model.rs  robot_physical_params.rs  trajectory_params.rs  wheel_conversion.rs
ateam_controls_c/: Cargo.toml
ateam_controls_c/include/ateam_controls/: ateam_controls.h
ateam_controls_c/src/: lib.rs
cpp_tests/: CMakeLists.txt  test_add.cpp  test_bangbang.cpp  test_robot_model.cpp
